# Change log

Date          Version   Comment
2017/11/12    1.2.5     Handle headings with formatting properly, clean line-height property
2017/10/23    1.2.4     Handle temporary Zip file folder correctly on import, fixed by Leon Stringer
2017/09/05    1.2.3     Don't raise the memory limit for XSLT any more, fix coding standards errors
2017/08/14    1.2.2     Handle list item duplication bug inside adjacent table cells
2017/04/21    1.2.0     Use Bootstrap panel class for textboxes, use canonical tempdir reference
2017/02/19    1.1.8     Support setting the mapping between Word heading style and HTML heading element
2017/02/04    1.1.7     Handle block quotations, and textbox exports
2017/02/02    1.1.6     Handle tables used as textboxes in a generic way
2017/01/18    1.1.5     Handle bookmarks/cross-references, improve image export and map heading levels
2017/01/17    1.1.4     Finally get images to export properly
2017/01/05    1.1.3     Fix error when handling empty table cells
2016/12/11    1.1.2     Improve export Word file formatting
2016/11/07    1.1.1     Remove requirement to install booktool_importhtml
2016/10/31    1.1.0     Retain table border style, handle WMF images better, support pre-formatted text
2016/04/12    1.0.1     Fix support for table headings (thead), offset headings from h3, not h1.
2016/04/09    1.0.0     Allow table styling based on class, declare plugin stable.
2016/04/07    0.9.7     Improve table formatting, support boxed text in books.
2016/02/08    0.9.6     Add support for images when exporting books to Word.
2016/02/06    0.9.5     Add basic support for exporting books to Word.
2016/02/06    0.9.4     Handle Word 2013 and LibreOffice files better.
2016/01/20    0.9.3     Clean up spans to omit default text colour, remove underline from links.
2016/01/07    0.9.2     Handle case where Word file has no Heading 1 styles.
2016/01/07    0.9.1     Re-instate some debugging to avoid errors.