@@ -7,10 +7,7 @@ cache:
     - $HOME/.composer/cache
 
 php:
- # - 5.4
- # - 5.5
  - 5.6
- - 7.0
 
 matrix:
  allow_failures:
@@ -24,13 +21,14 @@ env:
   # - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
   # - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
   # - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
-  # - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
 
 before_install:
+  - phpenv config-rm xdebug.ini
   - cd ../..
   - composer selfupdate
-  - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
+  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^1
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
